# ishares_etf_data

./: .gitignore  DISCLAIMER.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-publish.yml  python-tests.yml
examples/: README.md  analyze_sector_changes.py  get_latest_holdings.py  save_and_load_holdings.py  save_equity_tickers_by_date.py  save_tickers_by_date.py  test_ticker_cleaning.py  verify_latest_date.py
examples/output/: 20071231_ishares_russell_1000_etf_equities.txt  20121221_ishares_russell_1000_etf_equities.txt  20130327_ishares_russell_1000_etf_equities.txt  20130705_ishares_russell_1000_etf_equities.txt  20130926_ishares_russell_1000_etf_equities.txt  20131226_ishares_russell_1000_etf_equities.txt  20140327_ishares_russell_1000_etf_equities.txt  20140707_ishares_russell_1000_etf_equities.txt  20140926_ishares_russell_1000_etf_equities.txt  20141229_ishares_russell_1000_etf_equities.txt  20150327_ishares_russell_1000_etf_equities.txt  20150707_ishares_russell_1000_etf_equities.txt  20150929_ishares_russell_1000_etf_equities.txt  20151229_ishares_russell_1000_etf_equities.txt  20151231_ishares_russell_1000_etf_equities.txt  20160328_ishares_russell_1000_etf_equities.txt  20160708_ishares_russell_1000_etf_equities.txt  20160928_ishares_russell_1000_etf_equities.txt  20161227_ishares_russell_1000_etf_equities.txt  20170710_ishares_russell_1000_etf_equities.txt  20170927_ishares_russell_1000_etf_equities.txt  20171222_ishares_russell_1000_etf_equities.txt  (+29 more)
(+2 files in other folders)
