[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ishares_etf_data"
version = "0.1.0"
authors = [
  { name="Or Shemesh", email="0rshemesh@example.com" },
]
description = "An UNOFFICIAL Python library to fetch holdings data for iShares Russell 1000 ETF. Not affiliated with BlackRock or iShares."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=4.0.0",
    "mypy>=0.9.0",
    "black>=22.0.0",
    "build>=0.8.0",
    "twine>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/0rshemesh/ishares_etf_data"
"Bug Tracker" = "https://github.com/0rshemesh/ishares_etf_data/issues" 